# in-the-event-of-my-death

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.githooks/: pre-commit
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py  0002_add_expires_at.py  0002_add_token_prefix_columns.py  0003_add_capability_tokens.py
backend/app/: config.py  database.py  logging_config.py  main.py  scheduler.py
backend/app/middleware/: logging.py  rate_limit.py
backend/app/models/: __init__.py  capability_token.py  challenge.py  secret.py
backend/app/routers/: capability_tokens.py  challenges.py  feedback.py  secrets.py
backend/app/schemas/: __init__.py  capability_token.py  challenge.py  feedback.py  secret.py
backend/app/services/: capability_token_service.py  crypto_utils.py  discord_service.py  pow_service.py  secret_service.py  storage_service.py
backend/tests/: conftest.py  test_api.py  test_capability_tokens.py  test_correlation_id.py  test_database_startup.py  test_discord_alerts.py  test_feedback.py  test_health.py  test_migrations.py  test_pow_service.py  test_service.py  test_storage_service.py  test_utils.py
deploy/: Caddyfile  docker-compose.staging.yml  docker-compose.yml
docs/: deploy.md  design.md  smoke-tests.md  vault-design.md  versioning-and-migrations.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+42 files in other folders)
