[tool.poetry]
name = "in-the-event-of-my-death"
version = "0.1.0-beta"
description = "Zero-knowledge time-locked secret delivery service"
authors = ["Rich Miles <rich@ieomd.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
argon2-cffi = "^23.1.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.1.0"
slowapi = "^0.1.9"
python-multipart = "^0.0.6"
apscheduler = "^3.11.0"
structlog = "^24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
